add auth activationuser
