# src/controllers/authController.ts
@@ -19,16 +19,61 @@ type TLogin = {
 
 }
 
+// const registerValidation = Yup.object({
+//   fullName: Yup.string().required(),
+//   userName: Yup.string().required(),
+//   email: Yup.string().required(),
+//   password: Yup.string().required().min(6, "Password must be at least 6 characters").test('at-least-one-uppercase-letter', "Contains at least one uppercase letter", (value) => {
+//     if (!value) {
+//       return false;
+//     }
+
+//     const regex = /^(?=.*[A-Z])/;
+
+//     return regex.test(value);
+//   }).test('at-least-one-number', "Contains at least one number", (value) => {
+//     if (!value) {
+//       return false;
+//     }
+
+//     const regex = /^(?=.*\d)/;
+
+//     return regex.test(value);
+//   }),
+//   confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "Password must be matched or passowrd not match"),
+// });
+
+//optimal
 const registerValidation = Yup.object({
-  fullName: Yup.string().required(),
-  userName: Yup.string().required(),
-  email: Yup.string().required(),
-  password: Yup.string().required(),
-  confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "Password must be matched or passowrd not match"),
+  fullName: Yup.string()
+    .required("Full name is required"),
+
+  userName: Yup.string()
+    .required("Username is required"),
+
+  email: Yup.string()
+    .email("Invalid email format") //  tambahkan validasi format email
+    .required("Email is required"),
+
+  password: Yup.string()
+    .required("Password is required")
+    .min(6, "Password must be at least 6 characters")
+    .matches(/[A-Z]/, "Password must contain at least one uppercase letter")
+    .matches(/[0-9]/, "Password must contain at least one number"),
+
+  confirmPassword: Yup.string()
+    .required("Confirm password is required")
+    .oneOf([Yup.ref("password")], "Passwords must match"),
 });
+
 
 export default {
   async register(req: Request, res: Response) {
+
+    /**
+    #swagger.tags = ['Auth']
+    */
+
     const { fullName, userName, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -64,6 +109,9 @@ export default {
 
   async login(req: Request, res: Response){
     /**
+     
+     #swagger.tags = ['Auth']
+    
      #swagger.requestBody = {
       required: true,
       schema: {$ref: '#/components/schemas/LoginRequest'},
@@ -81,7 +129,8 @@ export default {
           { email: identifier },
           { userName: identifier },
         ],
-      })
+        isActive: true,
+      });
       
       if (!userByIdentifier) {
         return res.status(403).json({
@@ -126,6 +175,7 @@ export default {
   async me(req:IReqUser, res:Response){
 
     /**
+     #swagger.tags = ['Auth']
      #swagger.security = [{
       "bearerAuth": []
 
@@ -140,6 +190,45 @@ export default {
         messsage: "sukses mendapatkan profil user!",
         data: result,
       })
+    } catch (error) {
+      const err = error as unknown as Error;
+
+      res.status(400).json({
+          message: err.message,
+          data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res:Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      reuqired: true,
+      schema: {
+        $ref: '#/components/schemas/ActivationRequest'
+      }
+     }
+     */
+    try {
+
+      const {code} = req.body as {code: string}
+
+      const user = await UserModel.findOneAndUpdate(
+      {
+        activationCode: code,
+      },
+      {
+        isActive: true,
+      }, {
+        new: true,
+      });
+      
+      res.status(200).json({
+        message: "sukses mengaktifkan user!",
+        data: user,
+      })
+
     } catch (error) {
       const err = error as unknown as Error;
 
