# src/routes/api.ts
@@ -8,6 +8,8 @@ const router = express.Router();
 router.post('/auth/register', authController.register);
 router.post('/auth/login', authController.login);
 router.get('/auth/me', middleware, authController.me);
+router.post('/auth/activation', authController.activation);
+
 
 
 export default router;
